# larm

./: Cargo.toml  README.md  build.gradle.kts  gen_examples.sh  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/jvmMain/kotlin/io/github/eilifhl/larm/: App.kt  ImageWorkspace.kt  Main.kt
composeApp/src/jvmTest/kotlin/io/github/eilifhl/larm/: ComposeAppDesktopTest.kt
gradle/: libs.versions.toml
rust/src/: lib.rs
src/: Main.kt  lib.rs  main.rs
src/main/kotlin/: Application.kt  GrainProcessor.kt  ImageProcessingService.kt  ImageStore.kt  Models.kt  Routing.kt  Serialization.kt  Sockets.kt
src/main/resources/: application.yaml
src/main/resources/static/: index.html
src/test/kotlin/: ApplicationTest.kt
