[package]
name = "larm"
version = "0.1.0"
authors = ["Eilif Hjermann Lindblad <eilifhl@stud.ntnu.no>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
image = "0.25.9"
jni = "0.22.0"
noise = { version = "0.9.0", features = ["std"] }
rand = "0.10.0"
rayon = "1.11.0"

[lib]
crate-type = ["cdylib"]
